# spec2openapi

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  NOTICE  README.ko.md  README.md  SECURITY.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md  refactor.md
.github/workflows/: ci.yml
docs/: branching.md
docs/releases/: v0.2.1.ko.md  v0.2.1.md  v0.2.2.ko.md  v0.2.2.md  v0.3.0.ko.md  v0.3.0.md  v0.4.0.ko.md  v0.4.0.md
examples/: advanced.openapi.yaml  calculator.openapi.yaml  orders.openapi.yaml  petstore-upgraded.openapi.yaml  stress.openapi.yaml  substitution.openapi.yaml
k8s/: example.yaml
src/spec2openapi/: __init__.py  bridge.py  cli.py  convert.py  errors.py  openapi.py  parser.py  schema.py  server.py  swagger.py
tests/: conftest.py  mock_soap_server.py  test_advanced.py  test_bridge.py  test_checks.py  test_cli.py  test_conformance.py  test_convert.py  test_e2e.py  test_edgecases.py  test_errors.py  test_example_values.py  test_fastmcp_compat.py  test_input_layer.py  test_lazy_imports.py  test_runtime.py  test_stress.py  test_substitution.py  test_swagger.py
tests/corpus/: known_failures.txt  test_corpus.py
tests/fixtures/: advanced-types.xsd  advanced.wsdl  calculator.wsdl  dualport.wsdl  edgecases.wsdl  legacy-swagger.json  orders.wsdl  rpc.wsdl  stress-swagger.json  stress.wsdl  substitution.wsdl
