[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "spec2openapi"
version = "0.2.2"
description = "Convert legacy API specs (SOAP/WSDL, Swagger 2.0) into FastMCP-ready OpenAPI 3.x documents"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "Seoyul Yoon", email = "devops.reso@gmail.com" }]
keywords = [
    "wsdl", "soap", "swagger", "openapi", "mcp", "fastmcp",
    "converter", "legacy", "api",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Code Generators",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Internet :: WWW/HTTP",
]
dependencies = [
    "zeep>=4.2",
    "lxml>=4.9",
    "PyYAML>=6.0",
]

[project.urls]
Homepage = "https://github.com/Seo-yul/spec2openapi"
Repository = "https://github.com/Seo-yul/spec2openapi"
Issues = "https://github.com/Seo-yul/spec2openapi/issues"
Changelog = "https://github.com/Seo-yul/spec2openapi/blob/main/CHANGELOG.md"

[project.optional-dependencies]
mcp = [
    "fastmcp>=3.0",
    "httpx>=0.27",
]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "fastmcp>=3.0",
    "httpx>=0.27",
    "openapi-spec-validator>=0.7",
]

[project.scripts]
spec2openapi = "spec2openapi.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
spec2openapi = ["py.typed"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "corpus: opt-in sweep over real-world specs (network; run with -m corpus)",
]
addopts = "-m 'not corpus'"
